server/.happypack/s--701404764
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/reducers/toolsReducer.js: Unexpected token, expected , (3:14)

[0m [90m 1 | [39m[36mimport[39m {
 [90m 2 | [39m    [33mSET_CURRENT_ITEM[39m[33m,[39m
[31m[1m>[22m[39m[90m 3 | [39m    [33mGenerated[39m structures
 [90m   | [39m              [31m[1m^[22m[39m
 [90m 4 | [39m} from [32m'../constants/Tools'[39m[33m;[39m
 [90m 5 | [39m
 [90m 6 | [39m[36mconst[39m initialState [33m=[39m {[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/reducers/toolsReducer.js: Unexpected token, expected , (3:14)

[0m [90m 1 | [39m[36mimport[39m {
 [90m 2 | [39m    [33mSET_CURRENT_ITEM[39m[33m,[39m
[31m[1m>[22m[39m[90m 3 | [39m    [33mGenerated[39m structures
 [90m   | [39m              [31m[1m^[22m[39m
 [90m 4 | [39m} from [32m'../constants/Tools'[39m[33m;[39m
 [90m 5 | [39m
 [90m 6 | [39m[36mconst[39m initialState [33m=[39m {[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)